store plugin resources under the eclipse plugin name
git-svn-id: https://eclim.svn.sourceforge.net/svnroot/eclim/trunk@384 b5bd0a2e-1a23-0410-8567-9814cbbba304